# tapo-browser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.bat  run.sh
.claude/: launch.json
homeassistant-addon/: Dockerfile  README.md  config.yaml  run.sh
src/tapo_cli/: __init__.py  __main__.py  app.py  config.py  models.py  paths.py
src/tapo_cli/api/: cameras.py  controls.py  downloads.py  playback.py  recordings.py  stream.py
src/tapo_cli/bootstrap/: binaries.py  sources.py
src/tapo_cli/db/: connection.py  repo.py  schema.sql
src/tapo_cli/streaming/: go2rtc.py  source.py
src/tapo_cli/tapo/: client.py  cloud_auth.py  controls.py  downloader.py  info.py  media_session_limiter.py  playback.py  playback_manager.py  recordings.py  thumbnail_cache.py  thumbnails.py  ts_demux.py  webrtc_playback.py  webrtc_sdp.py  webrtc_signaling.py  webrtc_srtp_patch.py
src/tapo_cli/web/static/css/: app.css
src/tapo_cli/web/static/js/: api.js  app.js  live.js  player.js  recordings.js  thumbnail_loader.js
src/tapo_cli/web/templates/: index.html
