[project]
name = "tapo-cli"
version = "0.1.0"
description = "Local web app to manage TP-Link Tapo cameras: live view + browse/download SD recordings"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pytapo>=3.4,<4",
    "aiofiles>=23.0",  # pytapo's Downloader imports it but doesn't declare it
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
tapo-cli = "tapo_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapo_cli"]

[tool.uv]
# Keep the lock reproducible across the friend's machines.
package = true
